[gd_scene load_steps=10 format=3 uid="uid://wp31bdkw2ujt"]

[ext_resource type="Script" path="res://game/gamemode.gd" id="1_8jxqk"]
[ext_resource type="PackedScene" uid="uid://dhlm0r3kgrbs5" path="res://game/paddle.tscn" id="2_67h6p"]
[ext_resource type="PackedScene" uid="uid://cyvsrij56sdbt" path="res://game/ball.tscn" id="3_xnpqu"]
[ext_resource type="Texture2D" uid="uid://cbvi147u2de24" path="res://assets/GiantLightStudios - SimpleShapes/square_64.png" id="4_vvabt"]
[ext_resource type="Script" path="res://MainMenu.gd" id="5_ttrjt"]
[ext_resource type="Theme" uid="uid://cckteog731x5u" path="res://MainMenuTheme.tres" id="5_up4de"]
[ext_resource type="Script" path="res://settings.gd" id="6_h4t5a"]
[ext_resource type="Script" path="res://PauseMenu.gd" id="8_lfqy3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne3n4"]
size = Vector2(512, 64)

[node name="Main" type="Node"]

[node name="GameMode" type="Node" parent="."]
script = ExtResource("1_8jxqk")

[node name="World" type="Node2D" parent="."]
visible = false

[node name="Paddle" parent="World" instance=ExtResource("2_67h6p")]
position = Vector2(498, 435)
collision_mask = 2

[node name="Ball" parent="World" instance=ExtResource("3_xnpqu")]
position = Vector2(498, 78)

[node name="Map" type="Node2D" parent="World"]

[node name="Boundary" type="StaticBody2D" parent="World/Map"]
position = Vector2(500, 479)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="World/Map/Boundary"]
scale = Vector2(8, 1)
texture = ExtResource("4_vvabt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Map/Boundary"]
shape = SubResource("RectangleShape2D_ne3n4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 69
theme_override_constants/margin_top = 69
theme_override_constants/margin_right = 90
theme_override_constants/margin_bottom = 69
script = ExtResource("5_ttrjt")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 3

[node name="StartGameButton" type="Button" parent="UI/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_up4de")
text = "Start"
alignment = 0

[node name="OptionsButton" type="Button" parent="UI/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_up4de")
text = "Options"
alignment = 0

[node name="ExitButton" type="Button" parent="UI/MainMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_up4de")
text = "Exit"
alignment = 0

[node name="Settings" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_h4t5a")

[node name="OptionsMenu" type="MarginContainer" parent="UI/Settings"]
layout_mode = 1
offset_right = 291.0
offset_bottom = 155.0
theme_override_constants/margin_left = 69
theme_override_constants/margin_top = 69
theme_override_constants/margin_right = 69
theme_override_constants/margin_bottom = 69

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/OptionsMenu"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="UI/Settings/OptionsMenu/VBoxContainer2"]
layout_mode = 2
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="UI/Settings/OptionsMenu/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/OptionsMenu/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Fullscreen: "

[node name="FullscreenBox" type="CheckBox" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Resolution: "

[node name="ResolutionBox" type="OptionButton" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
item_count = 3
selected = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume: 
"

[node name="CenterContainer" type="CenterContainer" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AudioSlider" type="HSlider" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MuteLabel" type="Label" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Toggle Mute"

[node name="MuteBox" type="CheckBox" parent="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="PauseMenu" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 69
theme_override_constants/margin_top = 69
script = ExtResource("8_lfqy3")

[node name="CenterContainer" type="CenterContainer" parent="UI/PauseMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ResumeLabel" type="Label" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="SettingsLabel" type="Label" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="QuitLabel" type="Label" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="InGameUI" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 69
theme_override_constants/margin_top = 69

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InGameUI"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="UI/InGameUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Lives: 0"

[node name="ScoreLabel" type="Label" parent="UI/InGameUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Bonks: 0"

[connection signal="pressed" from="UI/MainMenu/HBoxContainer/VBoxContainer/StartGameButton" to="UI/MainMenu" method="_on_start_game_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/HBoxContainer/VBoxContainer/OptionsButton" to="UI/MainMenu" method="_on_options_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/HBoxContainer/VBoxContainer/ExitButton" to="UI/MainMenu" method="_on_exit_button_pressed"]
[connection signal="toggled" from="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer4/FullscreenBox" to="UI/Settings" method="_on_fullscreen_box_toggled"]
[connection signal="item_selected" from="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer3/ResolutionBox" to="UI/Settings" method="_on_resolution_box_item_selected"]
[connection signal="value_changed" from="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer/AudioSlider" to="UI/Settings" method="_on_audio_slider_value_changed"]
[connection signal="toggled" from="UI/Settings/OptionsMenu/VBoxContainer2/VBoxContainer/HBoxContainer2/MuteBox" to="UI/Settings" method="_on_mute_box_toggled"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/VBoxContainer/QuitButton" to="UI/PauseMenu" method="_on_quit_button_pressed"]
